--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 </head>
 <body>
 
-<h1>O que este app faz?</h1>
+<h1>TasksXP</h1>
 <p>
   A TasksXP tem como objetivo desenvolver um aplicativo de agendamento de tarefas do dia a dia, 
   afim de recompensar os usuários com um sistema de pontuações. 
