--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 </p>
                 <br>
                 <div style="text-align:center" class="container">
-                    <a class="button is-success">Download TasksXP</a>
+                    <a class="button is-success" href="https://github.com/matheusnathan22/TasksXP/raw/refs/heads/main/TasksXP.apk">Download TasksXP</a>
                 </div>
             </div>
         </section>
